Inclusão de novas features